<resources>
    <string name="app_name">کالابین</string>
    <string name="KalaBean">کالا بین</string>
    <string name="txt_fragmentRegister_register">عضویت :</string>
    <string name="radio_fragmentRegister_spacial">صاحب کسب و کار هستم</string>
    <string name="radio_fragmentRegister_regular">کاربر عادی</string>
    <string name="txt_fragmentRegister_gender">جنسیت :</string>
    <string name="txt_fragmentRegister_gender_man">مرد</string>
    <string name="txt_fragmentRegister_gender_woman">زن</string>
    <string name="edt_fragmentRegister_name">نام</string>
    <string name="edt_fragmentRegister_family">نام خانوادگی</string>
    <string name="edt_fragmentRegister_email">ایمیل</string>
    <string name="edt_fragmentRegister_mobile">شماره موبایل</string>
    <string name="txt_fragmentRegister_noteMobile">توجه : شماره موبایل شما به عنوان نام کاربری برای ورود به سایت تعریف می شود</string>
    <string name="edt_fragmentRegister_phone">شماره تماس</string>
    <string name="txt_fragmentRegister_notePhone">نمونه: 05130123456</string>
    <string name="edt_fragmentRegister_address">آدرس</string>
    <string name="edt_fragmentRegister_password">کلمه عبور</string>
    <string name="edt_fragmentRegister_confirmPassword">تایید کلمه عبور</string>
    <string name="btn_fragmentRegister_save">ذخیره</string>
    <string name="username">نام کاربری</string>
    <string name="edt_fragmentLogin_password">کلمه عبور</string>
    <string name="btn_fragmentLogin_login">تایید</string>
    <string name="sp_fragmentRegister_locationCity">انتخاب شهر</string>
    <string name="rb_fragmentEditUser_man">مرد</string>
    <string name="rb_fragmentEditUser_woman">زن</string>
    <string name="txt_fragmentEditUser_gender">جنسیت:</string>
    <string name="edt_fragmentEditUser_name">نام</string>
    <string name="edt_fragmentEditUser_family">نام خانوادگی</string>
    <string name="edt_fragmentEditUser_email">ایمیل</string>
    <string name="edt_fragmentEditUser_mobile">موبایل</string>
    <string name="edt_fragmentEditUser_phone">تلفن</string>
    <string name="password">رمز عبور</string>
    <string name="edt_fragmentEditUser_confpass">تایید کلمه عبور</string>
    <string name="btn_fragmentEditUser_upload">آپلود عکس</string>
    <string name="btn_fragmentEditUser_save">ذخیره</string>
    <string name="img_fragmentEditUser_contentDesc">عکس پروفایل</string>
    <string name="sp_fragmentEditUser_state">استان</string>
    <string name="sp_fragmentEditUser_city">شهر</string>
    <string name="txt_rvCircle_countStoreTitle">تعداد فروشگاه:</string>
    <string name="txt_rvCircle_storeName">نام فروشگاه:</string>
    <string name="txt_rvCircle_floorCountTitle">تعدادطبقات:</string>
    <string name="txt_rvCircle_addressTitle">آدرس:</string>
    <string name="txt_fragmentSearch_searchTitle">جستجو پیشرفته</string>
    <string name="rb_fragmentSearch_searchProduct">جستجو در محصولات</string>
    <string name="rb_fragmentSearch_searchShop">جستجو در فروشگاه</string>
    <string name="sp_fragmentSearch_cityName">نام شهر</string>
    <string name="sp_fragmentSearch_shopKind">نوع مرکز خرید</string>
    <string name="sp_fragmentSearch_shopName">نام مرکز خرید</string>
    <string name="sp_fragmentSearch_floor">طبقه</string>
    <string name="sp_fragmentSearch_activity">زمینه فعالیت</string>
    <string name="edt_fragmentSearch_productName">نام محصول</string>
    <string name="btn_fragmentSearch_search">جستجو</string>
    <string name="txt_fragmentSearch_number">0</string>
    <string name="txt_fragmentSearch_resultText">نتیجه برای جستجو شما...</string>
    <string name="txt_fragmentHome_markets">بازار</string>
    <string name="txt_fragmentHome_kalaBeanLook">کالابین در یک نگاه</string>
    <string name="txt_fragmentHome_malls">مجتمع های"\n"تجاری</string>
    <string name="txt_fragmentHome_mallsOneLine">مجتمع تجاری</string>
    <string name="txt_fragmentHome_advanceSearch">جستجو پیشرفته</string>
    <string name="txt_fragmentHome_chainStore">فروشگاه"\n"زنجیره ای</string>
    <string name="txt_fragmentHome_chainStoreLine">فروشگاه زنجیره ای</string>
    <string name="txt_fragmentHome_gallery">گالری</string>
    <string name="txt_fragmentHome_brands">برندها</string>
    <string name="sp_fragmentDefinition_storeKind">نوع مرکز خرید</string>
    <string name="sp_fragmentDefinition_storeName">نام مجتمع تجاری</string>
    <string name="sp_fragmentDefinition_floor">طبقه</string>
    <string name="sp_fragmentDefinition_activityKind">زمینه فعالیت</string>
    <string name="zero">0</string>
    <string name="stairs">Stairs</string>
    <string name="cafe">cafe</string>
    <string name="wc">wc</string>
    <string name="gift">gift</string>
    <string name="parking">parking</string>
    <string name="playstation">PlayStation</string>
    <string name="shop">Shop</string>
    <string name="wifi">WiFi</string>
    <string name="elevator">Elevator</string>
    <string name="edt_fragmentDefinition_storeName">نام فارسی فروشگاه</string>
    <string name="edt_fragmentDefinition_storeNameEn">Store name</string>
    <string name="edt_fragmentDefinition_storeNameAr">اسم المتجر</string>
    <string name="btn_fragmentDefinition_addActivity">افزودن فعالیت</string>
    <string name="edt_fragmentDefinition_fax">فکس</string>
    <string name="edt_fragmentDefinition_workHour">ساعت کاری</string>
    <string name="edt_fragmentDefinition_off">درصد حراج</string>
    <string name="edt_fragmentDefintion_addressFA">آدرس فارسی فروشگاه</string>
    <string name="edt_fragmentDefinition_addressAR">عنوان المتجر</string>
    <string name="edt_fragmentDefinition_addressEN">Store address</string>
    <string name="edt_fragmentDefinition_descriptionFA">توضیحات فارسی</string>
    <string name="edt_fragmentDefinition_descriptionEN">Description</string>
    <string name="edt_fragmentDefinition_artificialTour">تور مجازی</string>
    <string name="edt_fragmentDefinition_twitter">twitter</string>
    <string name="edt_fragmentDefinition_linkedIn">LinkedIn</string>
    <string name="edt_fragmentDefinition_google">Google</string>
    <string name="edt_fragmentDefinition_telegram">Telegram</string>
    <string name="edt_fragmentDefinition_facebook">Facebook</string>
    <string name="edt_fragmentDefinition_whatsApp">WhatsApp</string>
    <string name="ShopName">نام فروشگاه</string>
    <string name="shopsName">نام بازار</string>
    <string name="clientID">782676318210-skc96tqs45ju3f0nk7e0g2enaqqagoer.apps.googleusercontent.com</string>
    <string name="picture">عکس</string>
    <string name="product_image">تصویر محصول :</string>
    <string name="film">فیلم تبلیغاتی محصول</string>
    <string name="uploadvideo">آپلود فیلم</string>
    <string name="Cat">دسته</string>
    <string name="productName">نام محصول</string>
    <string name="Farsi">فارسی</string>
    <string name="english">English</string>
    <string name="Arabic">العربی</string>
    <string name="price">قیمت</string>
    <string name="Rial">ریال</string>
    <string name="reduction">تخفیف</string>
    <string name="percent">%</string>
    <string name="order">ترتیب</string>
    <string name="number">تعداد</string>
    <string name="KeyWords">کلمات کلیدی</string>
    <string name="NewProduct">محصول جدید</string>
    <string name="Description">توضیحات</string>
    <string name="save">دخیره</string>
    <string name="formRemove">حذف فرم</string>
    <string name="ProductTitle">عنوان محصول</string>
    <string name="txt_fragmentShops_Null">هیچ کالایی برای نمایش وجود ندارد</string>
    <string name="ticket">+ ایجاد تیکت جدید</string>
    <string name="subject">عنوان</string>
    <string name="question">سوال</string>
    <string name="Cancel">انصراف</string>
    <string name="Send">ارسال</string>
    <string name="rv_ticket_nameHolder">نام</string>
    <string name="txt_rvTicket_nameHolder">عنوان</string>
    <string name="txt_rvTicket_contentHolder">محتوا</string>
    <string name="txt_rvTicket_dateHolder">تاریخ</string>
    <string name="txt_rvTicket_hourHolder">ساعت</string>
    <string name="txt_rvTicket_statusHolder">وضعیت</string>
    <string name="home">خانه</string>
    <string name="Category">دسته بندی</string>
    <string name="Cities">شهرها</string>
    <string name="enter">ورود</string>
    <string name="sp_fragmentAddProduct_subCat">زیر دسته</string>
    <string name="rb_fragmentOrdinaryUser_favStore">فروشگاه محبوب</string>
    <string name="rb_fragmentOrdinaryUser_favProd">محصولات محبوب</string>
    <string name="txt_fragmentOrdinaryUser_profile">پروفایل</string>
    <string name="txt_basket">سبد خرید</string>
    <string name="txt_wallet">کیف پول</string>
    <string name="txt_message">پیام</string>
    <string name="addProduct">افزودن محصول</string>
    <string name="product_management">مدیریت محصول</string>
    <string name="edit_store">ویرایش اطلاعات\n فروشگاه</string>
    <string name="place">ثبت روی نقشه</string>
    <string name="showStore">مشاهده فروشگاه</string>
    <string name="selected_product">محصولات منتخب</string>
    <string name="favourite_product">در اینجا جدیدترین محصولات فروشگاه محبوب خود را مشاهده کنید</string>
    <string name="favourite_store">با لمس   فروشگاه را به لیست علاقمندی های خود اضافه کنید</string>
    <string name="selected_product_description">با لمس     محصول را به لیست علاقمندی های خود اضافه کنید</string>
    <string name="txt_fragmentHome_best">برترینها</string>
    <string name="txt_fragmentHome_newProductAdded">جدیدترین محصولات اضافه شده</string>
    <string name="reduct">حراجی ها</string>
    <string name="newJob">آخرین مشاغل اضافه شده</string>
    <string name="txt_fragmentHome_readMore">مطالعه بیشتر</string>
    <string name="txt_fragmentHome_lastNews">آخرین اخبار روز دنیا</string>
    <string name="txt_fragmentHome_lastNewsDescription">متن آخرین اخبار روز دنیا این یه متن گرافیکی است تنها جهت مشاهده است</string>
    <string name="news">خبر</string>
    <string name="txt_fragmentHome_more">بیشتر</string>
    <string name="txt_fragmentHome_reductPercent">%15</string>
    <string name="item_drawer_cities">شهرها</string>
    <string name="item_drawer_language">زبان</string>
    <string name="item_drawer_article">مقالات</string>
    <string name="item_drawer_guide">راهنما</string>
    <string name="item_drawer_support">پشتیبانی</string>
    <string name="item_drawer_about">درباره ما</string>
    <string name="item_drawer_exit">خروج</string>
    <string name="txt_enterPhoneNumber">لطفا شماره موبایل خود را وارد کنید</string>
    <string name="txtVerificationCode">کد تایید</string>
    <string name="btn_store_info">اطلاعات فروشگاه</string>
    <string name="shop_contact_info">تماس با فروشگاه</string>
    <string name="txt_count_view">تعداد بازدید</string>
    <string name="menu_cat_product">دسته بندی محصولات</string>
    <string name="menu_store_description">توضیحات</string>
    <string name="menu_store_branchs">شعب</string>
    <string name="definition_store">ایجاد فروشگاه</string>
    <string name="add_outer_image">افزودن عکس بیرونی</string>
    <string name="add_inner_image">افزودن عکس ذاخلی</string>
    <string name="http">http://</string>
    <string name="instagram">\@instagram account</string>
    <string name="telegram">\@telegram account</string>
    <string name="accept">تایید</string>
    <string name="storeName">نام مرکز خرید</string>
    <string name="site">وب سایت</string>
    <string name="instagramFA">اینستاگرام</string>
    <string name="telegramFA">تلگرام</string>
    <string name="request_product">درخواست کالا</string>
    <string name="request_product_description">درخواست خرید خود را به فروشندگان سطح شهر اطلاع دهید نتیجه را در قسمت پیام ها ببینید</string>
    <string name="color">رنگ</string>
    <string name="size">سایز</string>
    <string name="price_range">محمدوده قیمت</string>
    <string name="to">تا</string>
    <string name="toman">تومان</string>
    <string name="request_product_image">غکس مشابه یا خود کالا</string>
    <string name="register_description_part1">در صورتی که فروشگاه شما در سایت وجود دارد لطفا</string>
</resources>