<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
            <item
                android:id="@+id/home"
                android:icon="@drawable/ic_home"
                android:title="@string/home"
                />
            <item
                android:id="@+id/cat"
                android:icon="@drawable/ic_cat"
                android:title="@string/Category"/>
            <item
                android:id="@+id/holder"
                android:title="" />

            <item
                android:id="@+id/cities"
                android:icon="@drawable/ic_cities"
                android:title="@string/Cities" />

            <item
                android:id="@+id/enter"
                android:icon="@drawable/ic_enter"
                android:title="@string/enter"/>

</menu>