<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_rvTicket_nameHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/rv_ticket_nameHolder"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/txt_rvTicket_statusHolder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txt_rvTicket_statusHolder" />

            <TextView
                android:id="@+id/txt_rvTicket_subjectHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_rvTicket_nameHolder"
                android:layout_margin="20dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/txt_rvTicket_statusHolder"
                app:layout_constraintBottom_toTopOf="@+id/txt_rvTicket_contentHolder"
                app:layout_constraintStart_toEndOf="@+id/txt_rvTicket_nameHolder"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_rvTicket_contentHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_rvTicket_contentHolder"
                android:layout_margin="20dp"
                android:textSize="20sp"
                android:maxLength="15"
                app:layout_constraintEnd_toStartOf="@+id/txt_rvTicket_statusHolder"
                app:layout_constraintStart_toEndOf="@+id/txt_rvTicket_nameHolder"
                app:layout_constraintBottom_toBottomOf="@+id/txt_rvTicket_statusHolder"
                app:layout_constraintTop_toBottomOf="@+id/txt_rvTicket_subjectHolder" />

            <TextView
                android:id="@+id/txt_rvTicket_statusHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/txt_rvTicket_statusHolder"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="@+id/txt_rvTicket_subjectHolder"
                app:layout_constraintBottom_toBottomOf="@+id/txt_rvTicket_contentHolder"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/txt_rvTicket_dateHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_rvTicket_dateHolder"
                android:layout_margin="8dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/txt_rvTicket_hourHolder"
                app:layout_constraintTop_toBottomOf="@+id/txt_rvTicket_contentHolder" />

            <TextView
                android:id="@+id/txt_rvTicket_hourHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_rvTicket_hourHolder"
                android:layout_margin="8dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_rvTicket_dateHolder" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>