<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/con_fragmentEditUser_mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:background="@drawable/pattern_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_fragmentEditUser_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                        <EditText
                            android:id="@+id/edt_fragmentEditUser_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:padding="5dp"
                            android:alpha="0.5"
                            android:background="@drawable/shape_radius"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:hint="@string/edt_fragmentEditUser_name"
                            android:inputType="text"
                            android:textAlignment="textStart"
                            android:textSize="20sp" />




                        <EditText
                            android:id="@+id/edt_fragmentEditUser_family"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:background="@drawable/shape_radius"
                            android:padding="5dp"
                            android:alpha="0.5"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/edt_fragmentEditUser_name"
                            android:hint="@string/edt_fragmentEditUser_family"
                            android:inputType="text"
                            android:textAlignment="textStart"
                            android:textSize="20sp" />





                        <EditText
                            android:id="@+id/edt_fragmentEditUser_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/shape_radius"
                            android:padding="5dp"
                            android:alpha="0.5"
                            android:layout_margin="8dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/edt_fragmentEditUser_mobile"
                            android:hint="@string/edt_fragmentEditUser_email"
                            android:inputType="textEmailAddress"
                            android:textSize="20sp" />


                        <EditText
                            android:id="@+id/edt_fragmentEditUser_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:background="@drawable/shape_radius"
                            android:padding="5dp"
                            android:alpha="0.5"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/edt_fragmentEditUser_family"
                            android:hint="@string/edt_fragmentEditUser_mobile"
                            android:inputType="phone"
                            android:textAlignment="textStart"
                            android:textSize="20sp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_fragmentEditUser_support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cv_fragmentEditUser_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/item_drawer_support"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"
                android:background="@color/purple"/>

            <Button
                android:id="@+id/btn_fragmentEditUser_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/acceptButton"
                android:textColor="@color/colorWhite"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:padding="4dp"
                android:text="@string/btn_fragmentEditUser_save"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_fragmentEditUser_support" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>